Fix item modal header overflow

--- a/src/components/Lists/ItemModal/ItemModal.module.css
+++ b/src/components/Lists/ItemModal/ItemModal.module.css
@@ -7,13 +7,15 @@
   box-sizing: border-box;
 }
 
-.header h3 {
-  display: inline;
+.header {
+  display: flex;
 }
 
-.header button {
-  float: right;
-  display: inline;
+.header h3 {
+  flex-grow: 1;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .modal button {
